[package]
name = "gads-iac"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/arlyon/gads-iac"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
googleads-rs = "0.13.0"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.51.0", features = ["full"] }
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yup-oauth2 = "12.1.2"
colored = "2.1.0"
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
